facet-macros-emit/tests/codegen/snapshots/r#mod__codegen__struct_with_renamed_field.snap
---
source: facet-macros-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        struct Person {\n            #[facet(rename = \"firstName\")]\n            first_name: String,\n            #[facet(rename = \"lastName\")]\n            last_name: String,\n            age: u32,\n        }\n        \"#)"
---
static PERSON_SHAPE: &'static ::facet::Shape = <Person as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for Person {
    const VTABLE: &'static ::facet::ValueVTable = &const {
        let mut vtable =
            ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(f, "Person"));
        vtable
    };
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                {
                    ::facet::Field::builder()
                        .name("firstName")
                        .shape(::facet::shape_of(&|s: &Person| &s.first_name))
                        .offset(::core::mem::offset_of!(Person, first_name))
                        .build()
                },
                {
                    ::facet::Field::builder()
                        .name("lastName")
                        .shape(::facet::shape_of(&|s: &Person| &s.last_name))
                        .offset(::core::mem::offset_of!(Person, last_name))
                        .build()
                },
                {
                    ::facet::Field::builder()
                        .name("age")
                        .shape(::facet::shape_of(&|s: &Person| &s.age))
                        .offset(::core::mem::offset_of!(Person, age))
                        .build()
                },
            ]
        };
        ::facet::Shape::builder_for_sized::<Self>()
            .type_identifier("Person")
            .ty(::facet::Type::User(::facet::UserType::Struct(
                ::facet::StructType::builder()
                    .repr(::facet::Repr::default())
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            )))
            .build()
    };
}
