facet-macros-emit/tests/codegen/snapshots/r#mod__codegen__struct_with_std_string.snap
---
source: facet-macros-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        struct FileInfo {\n            path: std::string::String, // Explicitly use std::string::String\n            size: u64,\n        }\n        \"#)"
---
static FILE_INFO_SHAPE: &'static ::facet::Shape = <FileInfo as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for FileInfo {
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                {
                    ::facet::Field::builder()
                        .name("path")
                        .shape(|| ::facet::shape_of(&|s: &FileInfo| &s.path))
                        .offset(::core::mem::offset_of!(FileInfo, path))
                        .build()
                },
                {
                    ::facet::Field::builder()
                        .name("size")
                        .shape(|| ::facet::shape_of(&|s: &FileInfo| &s.size))
                        .offset(::core::mem::offset_of!(FileInfo, size))
                        .build()
                },
            ]
        };
        ::facet::Shape::builder_for_sized::<Self>()
            .vtable({
                let mut vtable =
                    ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(
                        f, "FileInfo"
                    ));
                vtable
            })
            .type_identifier("FileInfo")
            .ty(::facet::Type::User(::facet::UserType::Struct(
                ::facet::StructType::builder()
                    .repr(::facet::Repr::default())
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            )))
            .build()
    };
}
